--- a/config/database.yml
+++ b/config/database.yml
@@ -2,8 +2,8 @@ common: &common
   adapter: postgresql
   encoding: utf8
   database: big-brother
-  username: magency
-  password: 
+  username: florentangles
+  password:
   host: localhost
 
 development:
